--- a/speech2text.ipynb
+++ b/speech2text.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "openai.api_key = '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'\n",
+    "openai.api_key = 'your_api_key'\n",
     "\n",
     "r = sr.Recognizer()\n",
     "\n",
